--- a/SettingNPM/index.html
+++ b/SettingNPM/index.html
@@ -18,7 +18,8 @@
     <br>
     <br>
     <button id="random">Random</button>
-    <script type="text/javascript" src="script.js"></script>
+    <!-- <script type="text/javascript" src="script.js"></script> -->
+    <script type="text/javascript" src="bundle.js"></script>
 </body>
 
 </html>
